--- a/sortowanie/sortowanie.vcxproj.filters
+++ b/sortowanie/sortowanie.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="sortowanie.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
+    <ClCompile Include="sort.cpp">
+      <Filter>Pliki źródłowe</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="naglowki.h">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
